--- a/index.html
+++ b/index.html
@@ -3,31 +3,105 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Zelle Payment Tracker - Automate your Zelle payment tracking and organization in Google Sheets.">
   <title>Zelle Payment Tracker</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+      line-height: 1.6;
+      color: #333;
+    }
+    header {
+      background: #4CAF50;
+      color: #fff;
+      padding: 1rem 0;
+      text-align: center;
+    }
+    header h1 {
+      margin: 0;
+    }
+    nav {
+      background: #333;
+      color: #fff;
+      padding: 0.5rem;
+      text-align: center;
+    }
+    nav a {
+      color: #fff;
+      text-decoration: none;
+      margin: 0 1rem;
+      font-weight: bold;
+    }
+    section {
+      padding: 2rem;
+      max-width: 800px;
+      margin: auto;
+    }
+    section h2 {
+      color: #4CAF50;
+    }
+    footer {
+      background: #f4f4f4;
+      color: #333;
+      text-align: center;
+      padding: 1rem 0;
+      border-top: 1px solid #ddd;
+    }
+    footer a {
+      color: #4CAF50;
+      text-decoration: none;
+    }
+  </style>
 </head>
 <body>
   <header>
     <h1>Zelle Payment Tracker</h1>
-    <p>Effortlessly automate and track your Zelle payments in Google Sheets.</p>
+    <p>Effortlessly track and organize Zelle payments in Google Sheets.</p>
   </header>
-  <section>
+  
+  <nav>
+    <a href="#features">Features</a>
+    <a href="#privacy">Privacy</a>
+    <a href="#contact">Contact</a>
+  </nav>
+  
+  <section id="features">
     <h2>Features</h2>
     <ul>
-      <li>Automatically categorizes Zelle payments by team or ID.</li>
-      <li>Tracks unidentified payments in a dedicated sheet.</li>
-      <li>Provides payment summaries by date and total amount.</li>
+      <li>Automates Zelle payment tracking directly in Google Sheets.</li>
+      <li>Categorizes payments by team names or IDs.</li>
+      <li>Tracks unidentified payments in a separate sheet for easy review.</li>
+      <li>Provides summaries by date and total amounts for streamlined reporting.</li>
     </ul>
   </section>
-  <section>
+  
+  <section id="privacy">
     <h2>Privacy and Data Usage</h2>
     <p>
-      The Zelle Payment Tracker app securely processes your Gmail and Google Sheets data to track payments. 
-      We do not share or store your data outside your Google Workspace environment.
+      The Zelle Payment Tracker app securely integrates with your Google Workspace to access Gmail and Google Sheets. 
+      We only process data necessary for tracking and organizing Zelle payments. 
+      No data is shared or stored outside your Google environment.
     </p>
+    <p>Read our full <a href="https://yourdomain.com/privacy-policy" target="_blank">Privacy Policy</a>.</p>
   </section>
+  
+  <section id="contact">
+    <h2>Contact Us</h2>
+    <p>
+      Have questions or need assistance? Feel free to reach out to us at:
+    </p>
+    <p>Email: <a href="mailto:support@yourdomain.com">support@yourdomain.com</a></p>
+    <p>Visit our <a href="https://yourdomain.com/faq" target="_blank">FAQ</a> for more information.</p>
+  </section>
+  
   <footer>
-    <p>For more information, please read our <a href="https://example.com/privacy-policy">Privacy Policy</a> and <a href="https://example.com/terms-of-service">Terms of Service</a>.</p>
-    <p>Contact us: <a href="mailto:support@example.com">support@example.com</a></p>
+    <p>&copy; 2025 Zelle Payment Tracker. All rights reserved.</p>
+    <p>
+      <a href="https://yourdomain.com/terms-of-service" target="_blank">Terms of Service</a> | 
+      <a href="https://yourdomain.com/privacy-policy" target="_blank">Privacy Policy</a>
+    </p>
   </footer>
 </body>
 </html>
