--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
       We only process data necessary for tracking and organizing Zelle payments. 
       No data is shared or stored outside your Google environment.
     </p>
-    <p>Read our full <a href="https://yourdomain.com/privacy-policy" target="_blank">Privacy Policy</a>.</p>
+    <p>Read our full <a href="/privacy-policy.md" target="_blank">Privacy Policy</a>.</p>
   </section>
   
   <section id="contact">
@@ -92,15 +92,14 @@
     <p>
       Have questions or need assistance? Feel free to reach out to us at:
     </p>
-    <p>Email: <a href="mailto:support@yourdomain.com">support@yourdomain.com</a></p>
-    <p>Visit our <a href="https://yourdomain.com/faq" target="_blank">FAQ</a> for more information.</p>
+    <p>Email: <a href="mailto:ut.mehrotra@gmail.com">ut.mehrotra@gmail.com</a></p>
   </section>
   
   <footer>
     <p>&copy; 2025 Zelle Payment Tracker. All rights reserved.</p>
     <p>
-      <a href="https://yourdomain.com/terms-of-service" target="_blank">Terms of Service</a> | 
-      <a href="https://yourdomain.com/privacy-policy" target="_blank">Privacy Policy</a>
+      <a href="/terms-conditions.md" target="_blank">Terms of Service</a> | 
+      <a href="/privacy-policy.md" target="_blank">Privacy Policy</a>
     </p>
   </footer>
 </body>
