--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
       We only process data necessary for tracking and organizing Zelle payments. 
       No data is shared or stored outside your Google environment.
     </p>
-    <p>Read our full <a href="/privacy-policy.md" target="_blank">Privacy Policy</a>.</p>
+    <p>Read our full <a href="https://github.com/utmehrotra/APA-Zelle-Tracker/blob/main/privacy-policy.md" target="_blank">Privacy Policy</a>.</p>
   </section>
   
   <section id="contact">
@@ -98,8 +98,8 @@
   <footer>
     <p>&copy; 2025 Zelle Payment Tracker. All rights reserved.</p>
     <p>
-      <a href="/terms-conditions.md" target="_blank">Terms of Service</a> | 
-      <a href="/privacy-policy.md" target="_blank">Privacy Policy</a>
+      <a href="https://github.com/utmehrotra/APA-Zelle-Tracker/blob/main/terms-conditions.md" target="_blank">Terms of Service</a> | 
+      <a href="https://github.com/utmehrotra/APA-Zelle-Tracker/blob/main/privacy-policy.md" target="_blank">Privacy Policy</a>
     </p>
   </footer>
 </body>
